<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/gradiant_primary_vertical"
    tools:context=".ui.country_details.CountryDetailsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_country"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="18dp"
        android:backgroundTint="@color/light_blue"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_front"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="26dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_capital"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.45"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintVertical_chainStyle="packed"
                tools:src="@drawable/ic_europe"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/poi_bold"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/img_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"
                tools:text="Country Name" />

            <TextView
                android:id="@+id/tv_capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poi_regular"
                android:gravity="center_vertical"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_capital"
                app:drawableTint="@color/dark_gray"
                app:layout_constraintBottom_toTopOf="@id/tv_subregion"
                app:layout_constraintEnd_toEndOf="@id/tv_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/img_cover"
                tools:text="Capital Name" />

            <TextView
                android:id="@+id/tv_subregion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="8dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poi_regular"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_location"
                app:drawableTint="@color/dark_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_population"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_capital"
                tools:text="Subregion" />

            <TextView
                android:id="@+id/tv_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="30dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poi_regular"
                android:textColor="@color/accent"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_people"
                app:drawableTint="@color/accent"
                app:layout_constraintBottom_toBottomOf="@id/tv_subregion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_subregion"
                app:layout_constraintTop_toTopOf="@+id/tv_subregion"
                tools:text="@string/btn_population" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:orientation="vertical"
            android:rotationY="180">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poi_bold"
                android:text="@string/lbl_country_details_title"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="26sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginBottom="12dp"
                        android:drawablePadding="4dp"
                        android:fontFamily="@font/poi_regular"
                        android:gravity="center_vertical"
                        android:textColor="@color/accent"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/ic_map"
                        app:drawableTint="@color/accent"
                        tools:text="120 km" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poi_bold"
                        android:gravity="center_vertical"
                        android:text="@string/lbl_languages_title"
                        android:textColor="@color/primary"
                        android:textSize="20sp"
                        app:drawableStartCompat="@drawable/ic_language"
                        app:drawableTint="@color/primary" />

                    <TextView
                        android:id="@+id/tv_languages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/poi_regular"
                        android:lineSpacingMultiplier="1.5"
                        android:textColor="@color/dark_gray"
                        android:textSize="16sp"
                        tools:text="- English\n- German" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poi_bold"
                        android:gravity="center_vertical"
                        android:text="@string/lbl_borders_title"
                        android:textColor="@color/primary"
                        android:textSize="20sp"
                        app:drawableStartCompat="@drawable/ic_compass"
                        app:drawableTint="@color/primary" />

                    <TextView
                        android:id="@+id/tv_borders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/poi_regular"
                        android:lineSpacingMultiplier="1.5"
                        android:textColor="@color/dark_gray"
                        android:textSize="16sp"
                        tools:text="- English\n- German" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_details"
        style="@style/LightButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/btn_show_details"
        android:textColor="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="@id/card_country"
        app:layout_constraintTop_toBottomOf="@id/card_country" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_elements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="card_country, btn_details"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>